--- a/.gitignore/.gitignore
+++ b/.gitignore/.gitignore
@@ -6,10 +6,16 @@ body {
 	padding: 0 !important;
     font-size: 11px;
 }
-b { text-shadow: none !important; }
+
+b { text-shadow: none !important; font-family: calibri !important; }
+div b font { color: #fff !important; }
+
 td a {
     font-family: calibri; color: #55943a;
+    text-shadow: none !important;
 }
+
+td a:hover {text-decoration: none !important; color: rgba(255, 255, 255, 0.4) !important; transition: .5s !important; }
 .table-2-new table tr td div {
     background: none !important;  
     color: #fff !important;
@@ -17,15 +23,18 @@ td a {
     font: bold 12px calibri !important;
 }
 
-a { font-family: calibri; color: #55943a; }
-a:hover { text-decoration: none !important; color: rgba(255, 255, 255, 0.4); transition: .5s; }
+a { font-family: calibri !important; color: #55943a; }
+a:hover { text-decoration: none !important; color: rgba(255, 255, 255, 0.4) !important; transition: .5s; }
+
 table tr td a img { 
     border: 0 !important; 
     border-radius: 3px !important;
     -moz-border-radius: 3px !important;
     -webkit-border-radius: 3px !important;    
     margin-right: 5px;
+    
 }
+
 table tbody tr td hr {
  border: 0 !important;
 }
@@ -145,10 +154,30 @@ small {
 {
 	background: #1d1d1d;
 	color: #fff;
-	font: normal 11px calibri;
+	font: normal 11px calibri !important;
 	padding: 8px 16px 8px 16px;
 	width: 309px;
 }
+.side-2 a { font-size: 10px !important; font-weight: bold; margin-left: 3px; }
+.side-2 div {
+ background-image: none !important;
+    border: 0 !important;
+    font-family: calibri !important;
+    font: normal 12px calibri !important;
+    color: #fff !important;
+}
+
+.side-2 table tbody tr td span {
+    border-radius: 3px !important;
+    padding: 3px !important;
+    text-shadow: none !important;
+    
+}
+
+.side-2 table tbody tr td {
+    border-bottom: 0 !important;
+}
+
 .side-3
 {
 	background: #000;
@@ -167,10 +196,9 @@ background-color: #2d3436;
 }
 .side-center tbody tr td {
    background-image: none !important;
+   
 }
-#breadcrumb-content {
- background-color: transparent !important   
-}
+
 div.forum-stats {
     color: #ecf0f1;
     font: normal 12px calibri;
@@ -226,6 +254,7 @@ div {
     box-shadow: none !important;
     text-shadow: none !important;
     font-family: calibri !important;
+    font: bold 12px calibri !important
 }
 div img {
     border-radius: 3px   
@@ -267,7 +296,7 @@ div img {
 	box-shadow: none;
 	-moz-box-shadow: none;
 	-webkit-box-shadow: none;
-    color: #fff; transition: .5s;
+    color: #fff !important; transition: .5s;
 
 }
 
@@ -296,14 +325,21 @@ div img {
 }
 .button:hover
 {
-	background-color: #1d1d1d; transition: .5s;
+	background-color: #2d3436 !important; transition: .5s;
 	background-image: none;
-	color: #fff;
+	color: #fff !important;
 	text-decoration: none;
 	text-shadow: 0;
 	border: 0;
 }
-
+.button:focus
+{
+	border: 0;
+	box-shadow: none;
+	position: relative;
+	top: 0;
+	left: 0;
+}
 .h-2-2
 {
     background: url("https://i.imgur.com/My2LQ4U.png") no-repeat;
@@ -337,7 +373,7 @@ div img {
 {
 	background: #1d1d1d;
 	color: #ffffff;
-	font: bold 14px calibri;
+	font: bold 14px calibri !important;
 	text-shadow: 0;
     border-bottom: 3px solid #55943a;
 	padding: 17px;
@@ -346,6 +382,11 @@ div img {
     border-top-left-radius: 4px;
     border-top-right-radius: 4px;
 }
+
+.table-1-new div {    
+font: bold 14px calibri !important;
+}
+
 .table-2-new
 {
 	background: #1d1d1d;
@@ -361,7 +402,8 @@ div img {
 
 .poll-button
 {
-	background-color: #2d3436;
+	background-color: #2d3436 !important;
+    background: #fff !important;
 	color: #ffffff;
 	font-family: calibri;
 	font-size: 11px;
@@ -423,10 +465,8 @@ div img {
 }
 
 .side-right table tr td div {
- background-color: transparent !important;   
-    
+ background-color: transparent !important;       
 }
-
 
 td {
     text-shadow: none !important;
@@ -528,10 +568,11 @@ a.nav b
     border-radius: 3px;
 }
 
-.table-2-new table tr td { background: transparent !important; color: #fff; }
+.table-2-new table tr td { background: transparent !important; color: #fff; border: 0 }
 .servers-table-3 {
     background: #1d1d1d;
 }
+fieldset { border: 0; }
 tr.row-cs {
     background-color: #1d1d1d;
     color: #202020;
@@ -545,7 +586,7 @@ tr.row-title-cs {
     height: 25px;
     border-top: 5px solid #000;
 }
-.h-1 { display: none; }
+.h-1 { display: none !important; }
 .servers-table-2 {
      background: #1d1d1d;
     padding: 0px 2px 0px 2px;
@@ -828,37 +869,55 @@ td.listtable a:hover.new
 }
 .crumbs
 {
+    background-color: #1d1d1d !important;
 	display: block;
 	padding-left: 0px;
+    border:0 !important;
 }
+.side-center div { background-color: transparent !important; border:0 !important;}
 
+#breadcrumb-content {
+ background-color: #1d1d1d !important;
+    border-radius: 3px;
+    margin: 0
+    
+}
 .crumbs li
 {
 	display: inline;
+    
 }
 .crumbs li a
 {
-	background: url('images/bg-crumbs.png') no-repeat 100% 0px;
-	color: #2d3436;
-	font: normal 12px calibri;
+	background: transparent !important;
+	color: #fff;
+	font: bold 13px calibri !important;
 	text-decoration: none;
 	display: block;
 	float: left;
-	margin-left: -13px;
-	padding: 7px 17px 8px 25px;
+	margin: 0 !important;
+    padding: 10px;
 	position: relative;
+    text-transform: uppercase;
 }
 .crumbs li a:hover
 {
-	background-position: 100% -48px;
-	color: #2d3436;
+	background: transparent !important;
+	color: #ecf0f1 !important;
 	cursor: pointer;
+    border: 0 !important;
 }
 
 .crumbs li a:active
 {
-	background-position: 100% -96px;
-	color: #2d3436;
+	background: transparent !important;
+	color: #ecf0f1;
+}
+.crumbs li.first a span {
+    border-left: 0 !important;
+}
+.crumbs li.first a span:hover {
+ border: 0    
 }
 textarea.fast-reply, textarea.reply, input.text-field
 {
@@ -874,7 +933,7 @@ textarea.fast-reply, textarea.reply, input.text-field
 	resize: none;
 	width: 99%;
 }
-textarea { background: #2d3436; color: #fff !important; font-family: calibri !important;}
+textarea { background: #2d3436; color: #fff !important; font-family: calibri !important; border: 0 !important; border-radius: 3px; }
 textarea.reply:hover, input.text-field:hover
 {
 	background-color: #2d3436 !important;
@@ -883,6 +942,136 @@ textarea.reply:hover, input.text-field:hover
 textarea.reply:focus, input.text-field:focus {
     background-color: #2d3436 !important;
 	border: none !important;
+}
+.table-2-new form td {
+    border: 0 !important;
+}
+
+.textbox-edit-profile-1 {
+    background-color: #2d3436;
+    color: #fff;
+    font-family: calibri;
+    font-size: 11px;
+    border: 0;
+    border-radius: 3px 0px 0px 3px;
+    -moz-border-radius: 3px 0px 0px 3px;
+    -webkit-border-radius: 3px 0px 0px 3px;
+    box-shadow: none;
+    -moz-box-shadow: none;
+    -webkit-box-shadow: none;
+    padding: 12px 8px 12px 12px;
+    width: 100px;
+}
+.textbox-edit-profile-2:hover {
+    border: 0;
+}
+.textbox-edit-profile-1:hover {
+   border: 0;   
+}
+.textbox-edit-profile-2:focus
+{
+	border: 0;
+}
+.textbox-edit-profile-2 {
+    background-color: #ecf0f1;
+    color: #000000;
+    font-family: calibri;
+    font-size: 11px;
+    border: 0;
+    border-radius: 0px 3px 3px 0px;
+    -moz-border-radius: 0px 3px 3px 0px;
+    -webkit-border-radius: 0px 3px 3px 0px;
+    box-shadow: none;
+    -moz-box-shadow: none;
+    -webkit-box-shadow: none;
+    margin-left: -2px;
+    padding: 12px 16px 12px 16px;
+    width: 240px;
+}
+
+.shop-button {
+    background-color: #55943a !important;
+    background-image: none;
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorStr='#eeeeee', EndColorStr='#cccccc');
+    color: #fff;
+    font: bold 12px calibri;
+    text-shadow: none;
+    border: 0;
+    padding: 9px;
+    -webkit-border-radius: 3px;
+    -moz-border-radius: 3px;
+    border-radius: 3px;
+    -webkit-box-shadow: none;
+    -moz-box-shadow: none;
+    box-shadow: none;
+    display: inline-block;
+    white-space: nowrap;
+}
+.shop-button:hover {
+background-color: #2d3436 !important; transition: .5s;
+	background-image: none;
+	color: #fff !important;
+	text-decoration: none;
+	text-shadow: 0;
+	border: 0;    
+}
+.shop-text-field {
+    color: #1d1d1d;
+    background: #ecf0f1;
+    font: normal 14px calibri;
+    text-shadow: none;
+    border: 0;
+    -webkit-border-radius: 3px;
+    -moz-border-radius: 3px;
+    border-radius: 3px;
+    -webkit-box-shadow: none;
+    -moz-box-shadow: none;
+    box-shadow: none;
+    padding: 7px;
+    width: 250px;
+}
+.shop-text-field:focus
+{
+	border: 0;
+}
+
+.ok {
+    background: #1d1d1d;
+    color: #fff;
+    font: bold 12px calibri;
+    text-shadow: none;
+    border: 0;
+    border-radius: 3px;
+    -moz-border-radius: 3px;
+    -webkit-border-radius: 3px;
+    cursor: pointer;
+    margin-top: 5px;
+    padding: 2px 12px 2px 12px;
+}
+.ok:hover {
+   background-color: #1d1d1d; transition: .5s;
+	background-image: none;
+	color: #fff !important;
+	text-decoration: none;
+	text-shadow: 0;
+	border: 0; 
+}
+.user-name-pass {
+    font: normal 12px calibri;
+    border: 0;
+    border-radius: 3px;
+    -moz-border-radius: 3px;
+    -webkit-border-radius: 3px;
+    margin-top: 5px;
+    padding: 4px;
+    width: 170px;
+}
+.user-name-pass:focus
+{
+	border: 0;
+	box-shadow: none;
+	-moz-box-shadow: none;
+	-webkit-box-shadow: none;
 }
 
 ::-webkit-scrollbar-track{
